--- a/index.html
+++ b/index.html
@@ -1,67 +1,197 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>VincentZeng - 前端个人主页</title>
+    <link type="text/css" href="css/main.css" rel="stylesheet" charset="utf-8">
+    <script type="text/javascript" charset="UTF-8" src="js/setHomeSetFav.js"></script>
+    <script type="text/javascript" src="js/mf-pattern/mF_games_tb.js"></script><!--引入风格js文件 / 如果不引入需要自行在库中查找，加载慢很多 / 如果先引入库再引入两个风格文件，会导致一部分加载不出来-->
+    <link href="js/mf-pattern/mF_games_tb.css" type="text/css" /><!--引入风格css文件-->
+    <script type="text/javascript" src="js/myfocus-2.0.1.min.js"></script><!--引入myFocus库-->
+    <script type="text/javascript">
+        myFocus.set({
+            id:'boxID',//焦点图盒子ID
+            pattern:'mF_games_tb',//风格应用的名称
+            time:2,//切换时间间隔(秒)
+            trigger:'mouseover',//触发切换模式:'click'(点击)/'mouseover'(悬停)
+            width:982,//设置图片区域宽度(像素)
+            height:310,//设置图片区域高度(像素)
+            txtHeight:'default'//文字层高度设置(像素),'default'为默认高度，0为隐藏
+        });
+    </script>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Vincent-zeng.GitHub.com : 曾煌伟的个人主页。">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Vincent-zeng.GitHub.com</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Vincent-Zeng">View on GitHub</a>
-
-          <h1 id="project_title">Vincent-zeng.GitHub.com</h1>
-          <h2 id="project_tagline">曾煌伟的个人主页。</h2>
-
-        </header>
+</head>
+<body>
+    <div id = "top" class = "top">
+        <div id = "top-content" class = "top-content">
+            <ul>
+                <li>
+                    <a href="news.html" onclick="AddFavorite(window.location,window.document.title);">收藏</a>
+                </li>
+                <li>
+                    <a href="javascript:alert('E-mail : 632373328@qq.com');" >联系我</a>
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <div id ='wrap' class="wrap">
+        <div id = 'logo' class="logo">
+            <div id = 'logo_left' class="logo_left">
+                <img src="images/logo.jpg" alt="慕课网" />
+            </div>
+            <div id = 'logo_right' class="logo_right">
+                <img src="images/tel.jpg" alt="联系电话：" /><span>15529311373</span>
+            </div>
+        </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        <div>
+            <div id="nav_left" class="nav_left">
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+            </div>
+            <div id="nav_middle" class="nav_middle">
+                <div id="nav_mid_left" class="nav_mid_left">
+                     <ul>
+                         <li><a href="#">首页</a></li>
+                         <li><a href="#">关于慕课</a></li>
+                         <li><a href="#">新闻动态</a></li>
+                         <li><a href="#">课程中心</a></li>
+                         <li><a href="#">在线课程</a></li>
+                         <li><a href="#">人才招聘</a></li>
+                     </ul>
+                </div>
+                <div id="nav_mid_right" class="nav_mid_right">
+                    <form>
+                        <input type="text">
+                    </form>
+                </div>
+            </div>
+            <div id="nav_right" class="nav_right">
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+            </div>
+        </div>
+        <div id="boxID" class="ad"><!--焦点图盒子-->
+            <div class="loading"><img src="images/loading.gif" alt="请稍候..." /></div><!--载入画面(可删除)-->
+            <div class="pic"><!--内容列表(li数目可随意增减)-->
+                <ul>
+                    <li><a href="news.html"><img src="images/ad2.jpg" alt="1" /></a></li>
+                    <li><a href="news.html"><img src="images/ad3.jpg" alt="2" /></a></li>
+                    <li><a href="news.html"><img src="images/ad4.jpg" alt="3" /></a></li>
+                    <li><a href="news.html"><img src="images/ad2.jpg" alt="4" /></a></li>
+                </ul>
+            </div>
+        </div>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+        <div class="main">
+            <div class="news">
+                <div class="newsTitle">
+                    <h1>新闻中心</h1>
+                    <span><a href="news.html">More&gt&gt</a></span>
+                </div>
+                <div class="picNews">
+                    <img src="images/news.jpg"/>
+                    <p>
+                        <h1><a href="news.html">520 慕女神喊你来表白！</a></h1>
+                        <span>活动时间：5月20日―5月25日<br />
+                            获奖公布时间：5月26日<br />
+                             <a href="news.html">Learn More&gt&gt</a></span>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+                    </p>
+                </div>
+                <div class="newsList">
+                    <ul>
+                        <li><a href="news.html">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span> </li>
+                        <li><a href="news.html">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span></li>
+                        <li><a href="news.html">《程序猿，请晒出你的童年》活动获奖公告</a><span>2014-05-30</span></li>
+                        <li><a href="news.html" title="aa">【慕课访谈】破茧成蝶――美女程序员的蜕变史</a><span>2014-05-28</span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="course">
+                <div class="newsTitle">
+                    <h1>课程中心</h1>
+                    <span><a href="news.html">More&gt&gt</a></span>
+                </div>
+                <div class="coursePic">
+                    <img src="images/css.jpg"/>
+                    <p>
+                    <h1><a href="news.html">CSS圆角进化论</a></h1>
+                        <span>CSS圆角的实现，经历了三大发展阶段：背景图片方式、CSS2.0+HTML标签模拟、CSS3.0圆角属性）。本案例详细讲解每一种的实现方式，并对实现的优缺点进行对比分析。
+                        </span>
+                    </p>
+                </div>
+                <div class="courseType">
+                    <ul>
+                        <li>PHP开发</li>
+                        <li>前端开发</li>
+                        <li>JAVA开发</li>
+                        <li>Android开发</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sideBar">
+                <div class="vedio">
+                    <div class="newsTitle">
+                        <h1>音乐欣赏</h1>
+                        <span><a href="news.html">More&gt&gt</a></span>
+                    </div>
+                    <div class="vedioContent"><embed pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="100%" height="150px" flashvars="local=true&amp;amovid=5f4ffbc12418024&amp;refererdomain=yinyuetai.com&amp;domain=yinyuetai.com&amp;videoId=146049&amp;showlyrics=false&amp;capturevideoavailable=true&amp;sendsnaplog=true&amp;usepromptbar=true&amp;popupwin=true&amp;preamovid=true&amp;autostart=false&amp;showadvipbutton=true&amp;playerready=ifFlash&amp;swflocation=http%3A%2F%2Fs.yytcdn.com%2Fswf%2Fcommon%2Fmvplayer.swf%3Ft%3D2016042516" bgcolor="#000000" allowfullscreen="true" allowscriptaccess="always" wmode="window" id="yinyuetaiplayer" quality="high" name="yinyuetaiplayer" src="http://s.yytcdn.com/swf/common/playerloader.swf?t=2015112418"></div>
+                </div>
+                <div class="vedioName">
+                    <span>许嵩    想象之中</span>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
+    <div class="bottom">
+        <div class="bottomContent">
+            <ul>
+                <li>
+                    <h1>关于</h1>
+                    <ul>
+                        <li><a href="news.html">品牌故事</a></li>
+                        <li><a href="news.html">联系我们</a></li>
+                        <li><a href="news.html">加入我们</a></li>
+                        <li><a href="news.html">版权声明</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h1>课程</h1>
+                    <ul>
+                        <li><a href="news.html">PHP开发</a></li>
+                        <li><a href="news.html">前端开发</a></li>
+                        <li><a href="news.html">JAVA开发</a></li>
+                        <li><a href="news.html">Android开发</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h1>留言</h1>
+                    <ul>
+                        <li><a href="news.html">意见反馈</a></li>
+                        <li><a href="news.html">问题留言</a></li>
+                        <li><a href="news.html">媒体联络</a></li>
+                        <li><a href="news.html">在线客服</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h1>关注</h1>
+                    <ul>
+                        <li><a href="news.html">新浪微博</a></li>
+                        <li><a href="news.html">腾讯微博</a></li>
+                        <li><a href="news.html">企业微信</a></li>
+                        <li><a href="news.html">QQ空间</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h1><img src="images/weixin.png" alt="微信关注" width="30" height="27" />微信关注</h1>
+                    <ul>
+                        <li><img src="images/qrcode.jpg" alt="扫描关注慕课网官方微信" width="102" height="102" /></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    
-
-  </body>
+    <a href="#"><img src="images/returnTop.png" id="returnTop" title="回到顶部"/></a>
+</body>
 </html>
